Bug 1635597 - Send MozFirstContentfulPaint any document and not just the root r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D74334